--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,15 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+
 if(MSVC)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++latest")
 endif(MSVC)
 
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
+find_package(PCL REQUIRED)
+
+
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include ${PCL_INCLUDE_DIRS})
 
 
 FILE(GLOB_RECURSE SRC_LISTS ${CMAKE_SOURCE_DIR}/src/*.cpp)
